# ginacra

./: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README  TODO  config.h.in  ginacra.pc.in
cmake/: FindGiNaC.cmake  FindReadline.cmake
doxygen-conf/: CMakeLists.txt  doxygen.conf.in
examples/: CMakeLists.txt  benchmark_CAD_1.cpp  benchmark_Groebner_1.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example_AlgoSyn-presentation-2012-07.cpp  example_CAD_1.cpp  example_CAD_2.cpp  example_CAD_3.cpp  example_CAD_4.cpp  example_CAD_5.cpp  example_CAD_6.cpp  example_CAD_7.cpp  example_CAD_8.cpp  example_CAD_9.cpp  example_CAD_A.cpp  example_CAD_B.cpp  example_CAD_C.cpp  example_CADincremental_1.cpp  example_CADincremental_2.cpp  example_CADincremental_3.cpp  example_IR_1.cpp  example_IR_2.cpp  example_IR_3.cpp  example_IR_4.cpp  example_NFM2011-presentation.cpp  example_RAN_1.cpp  example_RAN_2.cpp  example_RAN_3.cpp  example_SGB_1.cpp
src/: CMakeLists.txt
src/lib/: CAD.cpp  CAD.h  CMakeLists.txt  Constraint.cpp  Constraint.h  Groebner.cpp  Groebner.h  MultivariateCoefficientMR.cpp  MultivariateCoefficientMR.h  MultivariateMonomialMR.cpp  MultivariateMonomialMR.h  MultivariatePolynomialMR.cpp  MultivariatePolynomialMR.h  MultivariateTermMR.cpp  MultivariateTermMR.h  OpenInterval.cpp  OpenInterval.h  Polynomial.cpp  Polynomial.h  RationalUnivariatePolynomial.cpp  RationalUnivariatePolynomial.h  RealAlgebraicNumber.cpp  RealAlgebraicNumber.h  RealAlgebraicNumberFactory.cpp  RealAlgebraicNumberFactory.h  RealAlgebraicNumberIR.cpp  RealAlgebraicNumberIR.h  RealAlgebraicNumberNR.cpp  RealAlgebraicNumberNR.h  RealAlgebraicPoint.cpp  RealAlgebraicPoint.h  SymbolDB.cpp  SymbolDB.h  UnivariatePolynomial.cpp  UnivariatePolynomial.h  UnivariatePolynomialSet.cpp  UnivariatePolynomialSet.h  UnivariateRepresentation.cpp  UnivariateRepresentation.h  VariableListPool.cpp  (+10 more)
src/test/: CAD_unittest.cpp  CAD_unittest.h  CMakeLists.txt  Constraint_unittest.cpp  Constraint_unittest.h  Groebner_unittest.cpp  Groebner_unittest.h  MultivariateMonomialMR_unittest.cpp  MultivariateMonomialMR_unittest.h  MultivariatePolynomialMR_unittest.cpp  MultivariatePolynomialMR_unittest.h  MultivariateTermMR_unittest.cpp  MultivariateTermMR_unittest.h  OpenInterval_unittest.cpp  OpenInterval_unittest.h  RationalUnivariatePolynomial_unittest.cpp  RationalUnivariatePolynomial_unittest.h  RealAlgebraicNumberFactory_unittest.cpp  RealAlgebraicNumberFactory_unittest.h  RealAlgebraicNumberIR_unittest.cpp  RealAlgebraicNumberIR_unittest.h  RealAlgebraicNumber_unittest.cpp  RealAlgebraicNumber_unittest.h  SpecialQuotientRingMultiplicationTable_unittest.cpp  UnivariatePolynomialSet_unittest.cpp  UnivariatePolynomialSet_unittest.h  UnivariatePolynomial_unittest.cpp  UnivariatePolynomial_unittest.h  test.cpp  utilities_unittest.cpp  utilities_unittest.h
src/tools/: CMakeLists.txt  ginacraconsole.cpp  ginacraconsole.h
