# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                                                             #
# File: src/CMakeLists.txt                                    #
#                                                             #
# Project name: GiNaCRA - GiNaC Real Algebra package          #
# Contact: Ulrich Loup <loup@cs.rwth-aachen.de>               #
# Project sourceforge page: http://ginacra.sourceforge.net/   #
# Development status: beta (testing + some features missing)  #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# Version: 2012-01-18                                         #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

add_subdirectory(lib)
if(CppUnit_FOUND)
add_subdirectory(test)
endif()
add_subdirectory(tools)